--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" data-theme='dark'>
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="An example web app about online courses" />
+    <meta
+      name="description"
+      content="An example web app about online courses"
+    />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <meta http-equiv="Content-Security-Policy"
           content="default-src 'self' https://localhost:44396/ https://localhost:44398/ https://fonts.googleapis.com/ https://fonts.gstatic.com/;
@@ -12,8 +18,9 @@
                    " /> -->
     <title>Vite + React + TS</title>
   </head>
-  <body> 
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
   </body>
 </html>
